# rally

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: cli.py  main.py
backend/app/adapters/: __init__.py  base.py  ohio.py
backend/app/api/: schemas.py
backend/app/api/routes/: admin.py  auth.py  campaigns.py  canvass.py  lookups.py  surveys.py  turfs.py  voters.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  audit.py  campaign.py  network.py  survey.py  turf.py  user.py  voter.py
backend/app/services/: geocoding.py  voter_import.py
backend/migrations/: env.py
backend/migrations/versions/: d480bca0e623_initial_schema.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: Layout.tsx  ProtectedRoute.tsx  SearchableSelect.tsx
dashboard/src/context/: AuthContext.tsx  CampaignContext.tsx
dashboard/src/pages/admin/: ImportPage.tsx
dashboard/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
dashboard/src/pages/campaign/: DashboardPage.tsx
dashboard/src/pages/surveys/: SurveysPage.tsx
dashboard/src/pages/turfs/: TurfsPage.tsx
dashboard/src/pages/voters/: VotersPage.tsx
docs/: DECISIONS.md
